--- a/inst/lessons/github_collaboration.qmd
+++ b/inst/lessons/github_collaboration.qmd
@@ -7,13 +7,13 @@
 
 ## Introduction to Git and GitHub Tools for Collaboration
 
-[![Artwork by Allison Horst](images/allison-horst-jenny-bryan-quote.png)](https://twitter.com/allison_horst)
+[![Artwork by Allison Horst](images/github_collaboration/allison-horst-jenny-bryan-quote.png)](https://twitter.com/allison_horst)
 
 Git is not only a powerful tool for individual work but also an excellent choice for collaborating with friends and colleagues. Git ensures that after you've completed your contributions to a repository, you can confidently synchronize your changes with changes made by others.
 
 One of the easiest and most effective ways to collaborate using Git is by utilizing a shared repository on a hosting service like [GitHub](https://github.com). This shared repository acts as a central hub, enabling collaborators to effortlessly exchange and merge their changes. With Git and a shared repository, you can collaborate seamlessly and work confidently, knowing that your changes will be integrated smoothly with those of your collaborators.
 
-<!-- [![Graphic from Atlassian](images/git-collab-repos.svg)](https://www.atlassian.com/git/tutorials/syncing){width="80%" fig-align="center"} -->
+<!-- [![Graphic from Atlassian](images/github_collaboration/git-collab-repos.svg)](https://www.atlassian.com/git/tutorials/syncing){width="80%" fig-align="center"} -->
 
 There are many advanced techniques for synchronizing Git repositories, but let's start with a simple example.
 
@@ -27,7 +27,7 @@ to directly pull and push from the Owner's GitHub repository.
 #| fig-align: "center"
 #| out-width: "100%"
 #| fig-cap: "We'll be practicing the above workflow in the next exercises -- here, a respository (aka repo) owner controls permissions on their remote repo, which is hosted on GitHub. They can push commits from their local repo to the remote repo. Similarly, they can pull commits from the remote repo to their cloned local repo(s) (remember, you can clone your repo to mulitple machines e.g. your laptop and your desktop). The repository owner adds a colleague as a collaborator by sending them an invite from the remote repo on GitHub. This collaborator can now push their own changes from their local repo to the now-shared remote repo (and also pull the Owner's changes). Git and GitHub provide the tools for both colleagues to create and merge their changes to the shared remote repository."
-knitr::include_graphics("images/github-collaborators-diagram.png")
+knitr::include_graphics("images/github_collaboration/github-collaborators-diagram.png")
 ```
 
 ## Collaborating with a trusted colleague **without conflicts**
@@ -74,7 +74,7 @@ Remember, `git pull` is a combination of `git fetch`ing remote changes to your l
 The **merge** part of `git pull` will fail if you have uncommitted changes in your local working file(s) to avoid any potential overwriting of your own changes. Because of this, you should always, add/commit *then* pull, *and finally* push.
 :::
 
-![](images/rstudio-commit-push.png){width="80%" fig-align="center"}
+![](images/github_collaboration/rstudio-commit-push.png){width="80%" fig-align="center"}
 
 ### INTERMEDIATE STEP: Collaborator communicates with Owner that they pushed their changes to GitHub {.unnumbered}
 
@@ -123,7 +123,7 @@ and all copies are once again fully synced. And just like that, you've successfu
 - Under **Manage Access** click the button **Add people** and type the username of your Collaborator in the search box
 - Once you've found the correct username, click **Add {Collaborator username} to this repository**
 
-<!-- ![](images/github-collaborators.png){width="80%" fig-align="center"} -->
+<!-- ![](images/github_collaboration/github-collaborators.png){width="80%" fig-align="center"} -->
 
 **Now, the Collaborator will follow this step:**
 
@@ -210,7 +210,7 @@ These techniques provide different benefits and are used in various collaboratio
 
 In this image, we see collaborators `mbjones` and `metamattj` have both made changes to the same line in the same `README.md` file. This is causing a merge conflict because Git doesn't know whose changes came first. To resolve it, we need to tell Git whose changes to keep for that line, and whose changes to discard. 
 
-![](images/git-conflict-00-lines-changed.png)
+![](images/github_collaboration/git-conflict-00-lines-changed.png)
 
 
 ### Common ways to resolve a merge conflict
@@ -249,7 +249,7 @@ Option 2, above, requires the command line, however, we have a third option for 
 
 When you `pull` a file with a conflict, Git will provide you with a warning modify the file so that it includes both your own changes and your Collaborator's changes. The file will also appear in the **Git** tab with an orange `U` icon, which indicates that the file is `Unmerged` and therefore awaiting your help to resolve the conflict. It delimits these blocks of conflicted code with a series of less than and greater than signs, so they are easy to find:
 
-![](images/rstudio-merge-conflict.png){width="80%" fig-align="center"}
+![](images/github_collaboration/rstudio-merge-conflict.png){width="80%" fig-align="center"}
 
 In the above example, `<<<<<<< HEAD` marks the start of *your* changes. The `=======` delimiter separates your changes from your Collaborator's conflicting changes. `>>>>>>>` mark the end of your Collaborator's changes. 
 
@@ -296,7 +296,7 @@ an error from GitHub. While the error message is long, it tells you everything
 needed (that the Owner's repository doesn't reflect the changes on GitHub, and that they
 need to `pull` before they can push).
 
-![](images/git-conflict-01-push-error.png)
+![](images/github_collaboration/git-conflict-01-push-error.png)
 
 ### Step 6: Owner pulls from GitHub to get Collaborator changes {.unnumbered}
 
@@ -304,12 +304,12 @@ Following the error message, the Owner pulls the changes from GitHub, and gets
 another, different error message. Here, it indicates that there is a merge 
 conflict because of the conflicting lines.
 
-![](images/git-conflict-02-pull-error.png)
+![](images/github_collaboration/git-conflict-02-pull-error.png)
 
 In the **Git** pane of RStudio, the file is also flagged with an orange `U`, which stands
 for an unresolved merge conflict.
 
-![](images/git-conflict-03-conflict.png)
+![](images/github_collaboration/git-conflict-03-conflict.png)
 
 ### Step 7: Owner edits the file to resolve the conflict {.unnumbered}
 
@@ -317,26 +317,26 @@ To resolve the conflict, the Owner now needs to edit the file. Again, as indicat
 Git has flagged the locations in the file where a conflict occurred 
 with `<<<<<<<`, `=======`, and `>>>>>>>`. The Owner should edit the file, merging whatever changes are appropriate until the conflicting lines read how they should, and eliminate all of the marker lines with `<<<<<<<`, `=======`, and `>>>>>>>`.
 
-![](images/git-conflict-04-conflict-tags.png)
+![](images/github_collaboration/git-conflict-04-conflict-tags.png)
 
 Of course, for scripts and programs, resolving the changes means more than just 
 merging the text -- whoever is doing the merging should make sure that the code 
 runs properly and that none of the logic of the program has been broken.
 
-![](images/git-conflict-05-resolved-file.png)
+![](images/github_collaboration/git-conflict-05-resolved-file.png)
 
 ### Step 8: Owner commits the resolved changes {.unnumbered}
 
 From this point forward, things proceed as normal. The Owner first `add`s the file, which changes the orange `U` to a blue `M` for modified. Then, the Owner commits the changes locally. The Owner now has a resolved version of the file on their
 system.
 
-![](images/git-conflict-06-commit-resolved.png)
+![](images/github_collaboration/git-conflict-06-commit-resolved.png)
 
 ### Step 9: Owner pushes the resolved changes to GitHub {.unnumbered}
 
 The Owner can now push the changes, without error, to GitHub. 
 
-![](images/git-conflict-07-push-resolved.png)
+![](images/github_collaboration/git-conflict-07-push-resolved.png)
 
 ### Step 10: Collaborator pulls the resolved changes from GitHub {.unnumbered}
 
@@ -347,7 +347,7 @@ Finally, the Collaborator can pull from GitHub to get the changes (which include
 Both the Collaborator and the Owner can view the history, which includes information about the conflict, the associated 
 branch, and the merged changes. 
 
-![](images/git-conflict-08-history.png)
+![](images/github_collaboration/git-conflict-08-history.png)
 
 ## Exercise 2: With a partner collaborate in a repository and resolve a merge conflict
 
@@ -397,7 +397,7 @@ Now it's your turn. In pairs, intentionally create a merge conflict, and then go
 Some basic rules of thumb can avoid the vast majority of merge conflicts, saving a lot of time and frustration. These are words our teams live by:
 
 ::: column-margin
-[![XKCD 1597](images/git-xkcd-comic.png)](https://xkcd.com/1597/)
+[![XKCD 1597](images/github_collaboration/git-xkcd-comic.png)](https://xkcd.com/1597/)
 :::
 
 - Communicate often and set up effective communication channels
