Added title in yaml header
This renders in the book to create a title at the top of the lesson, and populates the lesson name in the sidebar nav

--- a/inst/lessons/github_collaboration.qmd
+++ b/inst/lessons/github_collaboration.qmd
@@ -1,4 +1,7 @@
 ## Learning Objectives {.unnumbered}
+---
+title: Collaborating with Git and GitHub
+---
 
 - Apply the principles, features, and collaboration tools of Git and GitHub to effectively collaborate with colleagues on code
 - Analyze and evaluate common causes of conflicts that arise when collaborating on repositories 
