--- a/inst/lessons/github_introduction.qmd
+++ b/inst/lessons/github_introduction.qmd
@@ -1,3 +1,8 @@
+---
+title: Git and GitHub
+---
+
+
 ## Learning Objectives {.unnumbered}
 
 -   Apply the principles of Git to track and manage changes of a project
