--- a/inst/lessons/r_quarto_literate_analysis.qmd
+++ b/inst/lessons/r_quarto_literate_analysis.qmd
@@ -1,3 +1,7 @@
+---
+title: Literate Analysis with Quarto
+---
+
 ## Learning Objectives {.unnumbered}
 
 -   Introduce literate analysis using Quarto (an extension of RMarkdown's features)
