--- a/inst/lessons/r_functions.qmd
+++ b/inst/lessons/r_functions.qmd
@@ -1,3 +1,7 @@
+---
+title: Writing Functions
+---
+
 ## Learning Objectives {.unnumbered}
 
 -   Explain the importance of using and developing functions
