--- a/inst/lessons/r_tidyverse_clean_wrangle.qmd
+++ b/inst/lessons/r_tidyverse_clean_wrangle.qmd
@@ -1,3 +1,7 @@
+---
+title: Cleaning and Wrangling Data
+---
+
 ## Learning Objectives {.unnumbered}
 
 - Introduce `dplyr` and `tidyr` functions to clean and wrangle data for analysis
